# understanding_flow_matching

./: .gitignore  README.md  pyproject.toml
notebooks/: diffusion_mnist.ipynb  diffusion_moons.ipynb  flow_matching_mnist.ipynb  flow_matching_moons.ipynb
